--- a/src/style.css
+++ b/src/style.css
@@ -35,7 +35,7 @@
     border-color: #000;
     border-radius: 6px;
     border-width: 2px;
-    background-color: lightgreen;
+    background-color: #E8985E;
     font-weight: bold;
 }
 
@@ -186,7 +186,10 @@ input{
 .learn-videos{
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(1fr, 1fr)) ;
-    gap: .25rem;
+    gap: 5rem;
+    padding-right: 10vw;
+    padding-left: 10vw;
+    align-items: center;
     margin-top: 1rem;
     margin-left: 5px ;
     margin-right: 5px;
@@ -197,13 +200,19 @@ input{
     border-radius: 15px;
     background-color: lightgrey;
     padding: .5rem;
+
 }
 
 .video > .videoName{
     margin-bottom: .25rem;
 }
-.video > .body{
+.video > .video-body{
     font-size: .8rem;
+
+}
+
+#finalVideo{
+    margin-bottom: 100px;
 }
 
 .hide{
@@ -218,24 +227,40 @@ input{
 }
 
 .SocialMediaItem {
-    border-radius: 6px;
+    border-radius: 16px;
     border: 1px solid black;
     background-color: #fefefe;
     margin: 5px 5px auto;
+    margin-bottom: 2vh;
+    padding: 0.5rem;
+}
 
+.socialMediaAll{
+    padding-right: 10vh;
+    padding-left: 10vh;
+}
+
+#finalSocialItem{
+    margin-bottom: 100px;
 }
 
 .SocialMediaProfilePicture{
     border-radius: 50%;
     height: 40px;
     width: 40px;
-
 }
+
+
 
 .SocialMediaUserName{
     font-weight: bold;
     margin-left: 3px;
+    color: #333333;
+    padding-left: 10px;
+}
 
+.topUser{
+    padding-top: 10px;
 }
 
 .SocialMediaHeader{
@@ -266,6 +291,12 @@ input{
     justify-content: center;
     width: auto;
     height: 800px;
+}
+
+.SocialMediaContent img,
+.SocialMediaContent video{
+    max-width: 100%;
+    height: auto;
 }
 
 
@@ -313,11 +344,12 @@ input{
     background-color: #6987C9;
     border: 2px solid #333333;
     border-radius: 6px;
+    font-weight: bold;
 }
 
 #clearList{
     margin-left: 10vw;
-    background-color: #E8985E;
+    background-color: #A9714B;
     border: 2px solid #333333;
     border-radius: 6px;
     color: #000000;
